Restored Global component's position to avoid being on top of Navbar on small screen.

--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -7,7 +7,7 @@
     line-height: 1.2;
     transform: translateY(-50%);
     text-align: center;
-    z-index: var(--ifm-z-index-fixed);
+    z-index: var(--ifm-z-index-dropdown);
 }
 
 .centered {
